--- a/src/styles/detail.component.css
+++ b/src/styles/detail.component.css
@@ -1,8 +1,9 @@
 .detail-container {
     padding: 20px;
-    margin-left: 100px;
-    margin-right: 100px;
-   
+    padding-left: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
+    max-width: 100%;
   }
   
   .detail-container h2 {
