--- a/src/styles/table.component.css
+++ b/src/styles/table.component.css
@@ -3,9 +3,27 @@
     padding-left: 10px;
     margin-left: 50px;
     margin-right: 50px;
-    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
   }
-  
+
+  .ag-theme-alpine {
+    min-height: 250px;
+    width: 100%;
+    flex: 1;
+    max-height: 480px; 
+    overflow-y: auto; 
+  }
+
+  .pagination-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    min-height: 50px; 
+  }
+
+
   .table-container h2 {
     margin-bottom: 16px;
     font-size: 24px;
@@ -13,11 +31,6 @@
   
   .header {
     align-items: center;
-    margin-bottom: 16px;
-  }
-  
-  .add-button {
-    margin-bottom: 16px;
   }
   
   
@@ -29,6 +42,8 @@
     color: #1890ff;
     border-color: #1890ff;
   }
+
+  
   
   .action-button.edit {
     color: #faad14;
@@ -40,10 +55,6 @@
     border-color: #ff4d4f;
   }
   
-  .ag-theme-alpine {
-    width: 100%;
-    height: calc(100vh - 200px);
-  }
   
   .modal-form .ant-input,
   .modal-form .ant-picker {
